force-app/main/default/objects/Opportunity/fields/aangenomen_door__c.field-meta.xml
<CustomField>
    <fullName>aangenomen_door__c</fullName>
    <label>aangenomen_door</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>