force-app/main/default/objects/Opportunity/fields/adURL__c.field-meta.xml
<CustomField>
    <fullName>adURL__c</fullName>
    <formula>HYPERLINK(IF(ISPICKVAL(Job_Type__c, &apos;E4O&apos;), &apos;https://www.experts4office.nl/&apos;, &apos;https://jobs.capwell.nl/&apos;)+
IF(RecordType.DeveloperName=&apos;Freelance&apos;, &apos;opdrachten&apos;, &apos;vacatures&apos;)+&apos;/&apos;+ Slug__c, &apos;view advertising&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>adURL</label>
    <type>Text</type>
</CustomField>