force-app/main/default/objects/Opportunity/fields/Advertising__c.field-meta.xml
<CustomField>
    <fullName>Advertising__c</fullName>
    <label>Advertising</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>