force-app/main/default/objects/Opportunity/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>