force-app/main/default/objects/Opportunity/fields/All_Involved__c.field-meta.xml
<CustomField>
    <fullName>All_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Involved</label>
    <type>Checkbox</type>
</CustomField>