force-app/main/default/objects/Opportunity/fields/Available_for_Call__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Call</label>
    <type>Checkbox</type>
</CustomField>