force-app/main/default/objects/Opportunity/fields/bedrijfsnaam__c.field-meta.xml
<CustomField>
    <fullName>bedrijfsnaam__c</fullName>
    <label>bedrijfsnaam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>