force-app/main/default/objects/Opportunity/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <label>Benefits</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>