force-app/main/default/objects/Opportunity/fields/Buy_In__c.field-meta.xml
<CustomField>
    <fullName>Buy_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy In</label>
    <type>Checkbox</type>
</CustomField>