force-app/main/default/objects/Opportunity/fields/C_Level_Job__c.field-meta.xml
<CustomField>
    <fullName>C_Level_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C-Level Job</label>
    <type>Checkbox</type>
</CustomField>