force-app/main/default/objects/Opportunity/fields/Can_Call__c.field-meta.xml
<CustomField>
    <fullName>Can_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Call</label>
    <type>Checkbox</type>
</CustomField>