force-app/main/default/objects/Opportunity/fields/Candidate_can_be_Found__c.field-meta.xml
<CustomField>
    <fullName>Candidate_can_be_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate can be Found</label>
    <type>Checkbox</type>
</CustomField>