force-app/main/default/objects/Opportunity/fields/Candidates_Before_Decision__c.field-meta.xml
<CustomField>
    <fullName>Candidates_Before_Decision__c</fullName>
    <label>Candidates Before Decision</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>