force-app/main/default/objects/Opportunity/fields/CAP_Number__c.field-meta.xml
<CustomField>
    <fullName>CAP_Number__c</fullName>
    <displayFormat>CAP{MM}{YYYY}{00}</displayFormat>
    <label>CAP Number</label>
    <type>AutoNumber</type>
</CustomField>