force-app/main/default/objects/Opportunity/fields/Challenge_for_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Challenge_for_Candidate__c</fullName>
    <label>Challenge for Candidate</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>