force-app/main/default/objects/Opportunity/fields/Client_Description__c.field-meta.xml
<CustomField>
    <fullName>Client_Description__c</fullName>
    <label>Client Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>