force-app/main/default/objects/Opportunity/fields/Custom_Slug__c.field-meta.xml
<CustomField>
    <fullName>Custom_Slug__c</fullName>
    <label>Custom Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>