force-app/main/default/objects/Opportunity/fields/CVs_Received__c.field-meta.xml
<CustomField>
    <fullName>CVs_Received__c</fullName>
    <label>CVs Received</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>