force-app/main/default/objects/Opportunity/fields/datum_binnenkomst__c.field-meta.xml
<CustomField>
    <fullName>datum_binnenkomst__c</fullName>
    <label>datum_binnenkomst</label>
    <type>DateTime</type>
</CustomField>