force-app/main/default/objects/Opportunity/fields/datum_plaatsing__c.field-meta.xml
<CustomField>
    <fullName>datum_plaatsing__c</fullName>
    <label>datum_plaatsing</label>
    <type>Date</type>
</CustomField>