force-app/main/default/objects/Opportunity/fields/Decision_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Decision_Metrics__c</fullName>
    <label>Decision Metrics</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>