force-app/main/default/objects/Opportunity/fields/Desired_Skills__c.field-meta.xml
<CustomField>
    <fullName>Desired_Skills__c</fullName>
    <label>Desired Skills</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>