force-app/main/default/objects/Opportunity/fields/doorlenen__c.field-meta.xml
<CustomField>
    <fullName>doorlenen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doorlenen</label>
    <type>Checkbox</type>
</CustomField>