force-app/main/default/objects/Opportunity/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <label>Effort</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 dagen per week</fullName>
            </value>
            <value>
                <fullName>4 dagen per week</fullName>
            </value>
            <value>
                <fullName>3 dagen per week</fullName>
            </value>
            <value>
                <fullName>2 dagen per week</fullName>
            </value>
            <value>
                <fullName>1 dagen per week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>