force-app/main/default/objects/Opportunity/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capwell</fullName>
                <default>true</default>
                <label>Capwell</label>
            </value>
            <value>
                <fullName>Exports for Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>