force-app/main/default/objects/Opportunity/fields/estamit_period__c.field-meta.xml
<CustomField>
    <fullName>estamit_period__c</fullName>
    <label>estamit_period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>