force-app/main/default/objects/Opportunity/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Experience</valueSetName>
    </valueSet>
</CustomField>