force-app/main/default/objects/Opportunity/fields/Experience_flexible__c.field-meta.xml
<CustomField>
    <fullName>Experience_flexible__c</fullName>
    <label>Experience flexible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>