force-app/main/default/objects/Opportunity/fields/extra_dealpotentie__c.field-meta.xml
<CustomField>
    <fullName>extra_dealpotentie__c</fullName>
    <label>extra_dealpotentie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>