force-app/main/default/objects/Opportunity/fields/Flexibility_Process__c.field-meta.xml
<CustomField>
    <fullName>Flexibility_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flexibility Process</label>
    <type>Checkbox</type>
</CustomField>