force-app/main/default/objects/Opportunity/fields/form_functie_id__c.field-meta.xml
<CustomField>
    <fullName>form_functie_id__c</fullName>
    <label>form_functie_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>