force-app/main/default/objects/Opportunity/fields/functie_skill_id__c.field-meta.xml
<CustomField>
    <fullName>functie_skill_id__c</fullName>
    <label>functie_skill_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>