force-app/main/default/objects/Opportunity/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <label>Google ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>