force-app/main/default/objects/Opportunity/fields/Have_Customers__c.field-meta.xml
<CustomField>
    <fullName>Have_Customers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Customers</label>
    <type>Checkbox</type>
</CustomField>