force-app/main/default/objects/Opportunity/fields/html_tag_mode__c.field-meta.xml
<CustomField>
    <fullName>html_tag_mode__c</fullName>
    <label>html_tag_mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>