force-app/main/default/objects/Opportunity/fields/Ideal_Background__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Background__c</fullName>
    <label>Ideal Background</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Background_Level</valueSetName>
    </valueSet>
</CustomField>