force-app/main/default/objects/Opportunity/fields/If_not_Suitable__c.field-meta.xml
<CustomField>
    <fullName>If_not_Suitable__c</fullName>
    <label>If not Suitable</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>