force-app/main/default/objects/Opportunity/fields/inbehandeling_door__c.field-meta.xml
<CustomField>
    <fullName>inbehandeling_door__c</fullName>
    <label>inbehandeling_door</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>