force-app/main/default/objects/Opportunity/fields/interview_planned__c.field-meta.xml
<CustomField>
    <fullName>interview_planned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>interview_planned</label>
    <type>Checkbox</type>
</CustomField>