force-app/main/default/objects/Opportunity/fields/Interview_Suitable__c.field-meta.xml
<CustomField>
    <fullName>Interview_Suitable__c</fullName>
    <label>Interview Suitable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>