force-app/main/default/objects/Opportunity/fields/Introduce_less_experience__c.field-meta.xml
<CustomField>
    <fullName>Introduce_less_experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Introduce less experience</label>
    <type>Checkbox</type>
</CustomField>