force-app/main/default/objects/Opportunity/fields/inzet__c.field-meta.xml
<CustomField>
    <fullName>inzet__c</fullName>
    <label>inzet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>