force-app/main/default/objects/Opportunity/fields/inzet_period__c.field-meta.xml
<CustomField>
    <fullName>inzet_period__c</fullName>
    <label>inzet_period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>