force-app/main/default/objects/Opportunity/fields/is_content_job__c.field-meta.xml
<CustomField>
    <fullName>is_content_job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_content_job</label>
    <type>Checkbox</type>
</CustomField>