force-app/main/default/objects/Opportunity/fields/Is_Flexible__c.field-meta.xml
<CustomField>
    <fullName>Is_Flexible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Flexible</label>
    <type>Checkbox</type>
</CustomField>