force-app/main/default/objects/Opportunity/fields/is_junior__c.field-meta.xml
<CustomField>
    <fullName>is_junior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_junior</label>
    <type>Checkbox</type>
</CustomField>