force-app/main/default/objects/Opportunity/fields/is_lead__c.field-meta.xml
<CustomField>
    <fullName>is_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_lead</label>
    <type>Checkbox</type>
</CustomField>