force-app/main/default/objects/Opportunity/fields/is_medior__c.field-meta.xml
<CustomField>
    <fullName>is_medior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_medior</label>
    <type>Checkbox</type>
</CustomField>