force-app/main/default/objects/Opportunity/fields/is_option_extention__c.field-meta.xml
<CustomField>
    <fullName>is_option_extention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_option_extention</label>
    <type>Checkbox</type>
</CustomField>