force-app/main/default/objects/Opportunity/fields/is_populate_skill_search__c.field-meta.xml
<CustomField>
    <fullName>is_populate_skill_search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_populate_skill_search</label>
    <type>Checkbox</type>
</CustomField>