force-app/main/default/objects/Opportunity/fields/is_senior__c.field-meta.xml
<CustomField>
    <fullName>is_senior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_senior</label>
    <type>Checkbox</type>
</CustomField>