force-app/main/default/objects/Opportunity/fields/Job_c_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_c_Id__c</fullName>
    <label>Job_c_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>