force-app/main/default/objects/Opportunity/fields/Job_Index__c.field-meta.xml
<CustomField>
    <fullName>Job_Index__c</fullName>
    <displayFormat>CAP-{YYYY}-{000000}</displayFormat>
    <label>Job Index</label>
    <type>AutoNumber</type>
</CustomField>