force-app/main/default/objects/Opportunity/fields/Job_Rate__c.field-meta.xml
<CustomField>
    <fullName>Job_Rate__c</fullName>
    <label>Job Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>