force-app/main/default/objects/Opportunity/fields/LegacyAccountId__c.field-meta.xml
<CustomField>
    <fullName>LegacyAccountId__c</fullName>
    <externalId>true</externalId>
    <label>LegacyAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>