force-app/main/default/objects/Opportunity/fields/LegacyOpaID__c.field-meta.xml
<CustomField>
    <fullName>LegacyOpaID__c</fullName>
    <externalId>true</externalId>
    <label>LegacyOpaID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>