force-app/main/default/objects/Opportunity/fields/LegacySkillGroupId__c.field-meta.xml
<CustomField>
    <fullName>LegacySkillGroupId__c</fullName>
    <externalId>true</externalId>
    <label>LegacySkillGroupId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>