force-app/main/default/objects/Opportunity/fields/locatie__c.field-meta.xml
<CustomField>
    <fullName>locatie__c</fullName>
    <label>locatie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>