force-app/main/default/objects/Opportunity/fields/max_days__c.field-meta.xml
<CustomField>
    <fullName>max_days__c</fullName>
    <label>max_days</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>