force-app/main/default/objects/Opportunity/fields/MD_Description__c.field-meta.xml
<CustomField>
    <fullName>MD_Description__c</fullName>
    <description>Description for Meta Data header on the Web Page</description>
    <label>Meta-Data Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>