force-app/main/default/objects/Opportunity/fields/Minimum_Availability_Days__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Availability_Days__c</fullName>
    <label>Minimum Availability Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>