force-app/main/default/objects/Opportunity/fields/naw_aanhef__c.field-meta.xml
<CustomField>
    <fullName>naw_aanhef__c</fullName>
    <label>naw_aanhef</label>
    <length>255</length>
    <type>Text</type>
</CustomField>