force-app/main/default/objects/Opportunity/fields/naw_email__c.field-meta.xml
<CustomField>
    <fullName>naw_email__c</fullName>
    <label>naw_email</label>
    <type>Email</type>
</CustomField>