force-app/main/default/objects/Opportunity/fields/naw_functie__c.field-meta.xml
<CustomField>
    <fullName>naw_functie__c</fullName>
    <label>naw_functie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>