force-app/main/default/objects/Opportunity/fields/naw_naam__c.field-meta.xml
<CustomField>
    <fullName>naw_naam__c</fullName>
    <label>naw_naam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>