force-app/main/default/objects/Opportunity/fields/naw_source__c.field-meta.xml
<CustomField>
    <fullName>naw_source__c</fullName>
    <label>naw_source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>