force-app/main/default/objects/Opportunity/fields/naw_telefoon__c.field-meta.xml
<CustomField>
    <fullName>naw_telefoon__c</fullName>
    <label>naw_telefoon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>