force-app/main/default/objects/Opportunity/fields/offered_candidates__c.field-meta.xml
<CustomField>
    <fullName>offered_candidates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>offered_candidates</label>
    <type>Checkbox</type>
</CustomField>