force-app/main/default/objects/Opportunity/fields/onhold__c.field-meta.xml
<CustomField>
    <fullName>onhold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>onhold</label>
    <type>Checkbox</type>
</CustomField>