force-app/main/default/objects/Opportunity/fields/opa_duration__c.field-meta.xml
<CustomField>
    <fullName>opa_duration__c</fullName>
    <label>opa_duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>