force-app/main/default/objects/Opportunity/fields/opa_project_start__c.field-meta.xml
<CustomField>
    <fullName>opa_project_start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>opa_project_start</label>
    <type>Checkbox</type>
</CustomField>