force-app/main/default/objects/Opportunity/fields/OpaPersonID__c.field-meta.xml
<CustomField>
    <fullName>OpaPersonID__c</fullName>
    <label>OpaPersonID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>