force-app/main/default/objects/Opportunity/fields/OpaReference__c.field-meta.xml
<CustomField>
    <fullName>OpaReference__c</fullName>
    <label>OpaReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>