force-app/main/default/objects/Opportunity/fields/OpaSlug__c.field-meta.xml
<CustomField>
    <fullName>OpaSlug__c</fullName>
    <label>OpaSlug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>