force-app/main/default/objects/Opportunity/fields/Openness_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Openness_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Openness to Customer</label>
    <type>Checkbox</type>
</CustomField>