force-app/main/default/objects/Opportunity/fields/Own_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Own_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own Assignment</label>
    <type>Checkbox</type>
</CustomField>