force-app/main/default/objects/Opportunity/fields/Posted_on_FL__c.field-meta.xml
<CustomField>
    <fullName>Posted_on_FL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posted on FL</label>
    <type>Checkbox</type>
</CustomField>