force-app/main/default/objects/Opportunity/fields/Project_Management__c.field-meta.xml
<CustomField>
    <fullName>Project_Management__c</fullName>
    <label>Project Management</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>