force-app/main/default/objects/Opportunity/fields/Project_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Project_Purpose__c</fullName>
    <label>Project Purpose</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>