force-app/main/default/objects/Opportunity/fields/Project_Start__c.field-meta.xml
<CustomField>
    <fullName>Project_Start__c</fullName>
    <label>Project Start</label>
    <type>Date</type>
</CustomField>