force-app/main/default/objects/Opportunity/fields/Project_Start_Other__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Other__c</fullName>
    <description>If no exact date, this text in use, ex: ASAP, Next Year</description>
    <label>Project Start Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>