force-app/main/default/objects/Opportunity/fields/Quick_Decisions__c.field-meta.xml
<CustomField>
    <fullName>Quick_Decisions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quick Decisions</label>
    <type>Checkbox</type>
</CustomField>