force-app/main/default/objects/Opportunity/fields/radar_requested_person_id__c.field-meta.xml
<CustomField>
    <fullName>radar_requested_person_id__c</fullName>
    <externalId>true</externalId>
    <label>radar_requested_person_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>