force-app/main/default/objects/Opportunity/fields/Radius__c.field-meta.xml
<CustomField>
    <fullName>Radius__c</fullName>
    <label>Radius</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>