force-app/main/default/objects/Opportunity/fields/reageren_voor__c.field-meta.xml
<CustomField>
    <fullName>reageren_voor__c</fullName>
    <label>reageren_voor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>