force-app/main/default/objects/Opportunity/fields/Recruiter_Email__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Email__c</fullName>
    <label>Recruiter Email</label>
    <type>Email</type>
</CustomField>