force-app/main/default/objects/Opportunity/fields/recType__c.field-meta.xml
<CustomField>
    <fullName>recType__c</fullName>
    <formula>IF (RecordType.Name=&apos;Freelance&apos;, &apos;F&apos;, &apos;P&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>recType</label>
    <type>Text</type>
</CustomField>