force-app/main/default/objects/Opportunity/fields/Requested_Contact__c.field-meta.xml
<CustomField>
    <fullName>Requested_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>