force-app/main/default/objects/Opportunity/fields/Response_In__c.field-meta.xml
<CustomField>
    <fullName>Response_In__c</fullName>
    <label>Response In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>