force-app/main/default/objects/Opportunity/fields/searching_candidates__c.field-meta.xml
<CustomField>
    <fullName>searching_candidates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>searching_candidates</label>
    <type>Checkbox</type>
</CustomField>