force-app/main/default/objects/Opportunity/fields/Skill_Group__c.field-meta.xml
<CustomField>
    <fullName>Skill_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill Group</label>
    <referenceTo>Skill_Group__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>