force-app/main/default/objects/Opportunity/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <formula>CAP_Number__c+&quot;-&quot;+IF(ISBLANK(Custom_Slug__c), SUBSTITUTE( Name , &quot; &quot;, &quot;_&quot;), Custom_Slug__c)</formula>
    <label>Slug</label>
    <type>Text</type>
</CustomField>