force-app/main/default/objects/Opportunity/fields/Start_Delay__c.field-meta.xml
<CustomField>
    <fullName>Start_Delay__c</fullName>
    <label>Start Delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>