force-app/main/default/objects/Opportunity/fields/status_behandeling__c.field-meta.xml
<CustomField>
    <fullName>status_behandeling__c</fullName>
    <label>status_behandeling</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>