force-app/main/default/objects/Opportunity/fields/tarief_indicatie_klant__c.field-meta.xml
<CustomField>
    <fullName>tarief_indicatie_klant__c</fullName>
    <label>tarief_indicatie_klant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>