force-app/main/default/objects/Opportunity/fields/Technically_Right_Person__c.field-meta.xml
<CustomField>
    <fullName>Technically_Right_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technically Right Person</label>
    <type>Checkbox</type>
</CustomField>