force-app/main/default/objects/Opportunity/fields/Technicaly_Right_Person__c.field-meta.xml
<CustomField>
    <fullName>Technicaly_Right_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technicaly Right Person</label>
    <type>Checkbox</type>
</CustomField>